--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "dotenv": "^16.0.3",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
