--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "predeploy": "npm run build",
-"deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
@@ -26,5 +26,18 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
+  },
+  "name": "nftgallery",
+  "description": "",
+  "version": "1.0.0",
+  "main": "./pages/index.jsx",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/niluk-256/NFTgallery.git"
+  },
+  "author": "Niluka",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/niluk-256/NFTgallery/issues"
   }
 }
