--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
-    
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
@@ -23,6 +22,7 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   },
